# dc-crime

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
deploy/: cloudflared-config.yml.example  dccrime.service  logrotate.conf
docs/: deploy.md  operations.md
docs/superpowers/plans/: 2026-04-28-dc-crime-alerts-implementation.md
docs/superpowers/specs/: 2026-04-28-dc-crime-alerts-design.md
mockups/: index.html  map.html  unsubscribe.html
scripts/: backup.sh  seed.py
src/wswdy/: address.py  alerts.py  config.py  db.py  digest.py  geo.py  ids.py  main.py  offenses.py  ratelimit.py  scheduler.py  tiers.py  timefmt.py  tokens.py
tests/: conftest.py  test_address.py  test_alerts.py  test_config.py  test_crash_parties.py  test_crashes.py  test_db.py  test_digest.py  test_e2e_smoke.py  test_geo.py  test_geoapify.py  test_ids.py  test_jobs_fetch.py  test_jobs_health.py  test_jobs_prune.py  test_jobs_send.py  test_maptiler.py  test_mpd.py  test_notifier_dispatch.py  test_notifiers_email.py  test_notifiers_fake.py  test_notifiers_whatsapp.py  test_offenses.py  test_ratelimit.py  test_repos_admin_alerts.py  test_repos_crimes.py  test_repos_fetch_log.py  test_repos_send_log.py  test_repos_subscribers.py  test_routes_admin.py  test_routes_admin_review.py  test_routes_api_crashes.py  test_routes_api_crimes.py  test_routes_api_preview.py  test_routes_health.py  test_routes_map.py  test_routes_public.py  test_routes_unsubscribe.py  test_scheduler.py  test_tiers.py  (+2 more)
tests/fixtures/: mpd_sample.geojson
(+43 files in other folders)
