[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wswdy"
version = "0.1.0"
description = "DC Crime Alerts daily briefing"
requires-python = ">=3.12"
dependencies = [
    "tzdata>=2024.1",
    "fastapi[standard]>=0.100",
    "jinja2>=3.0",
    "aiofiles>=23.0",
    "apscheduler>=3.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
